--- a/TwitterApp/TwitterApp/Resource/LoginStoryboard.storyboard
+++ b/TwitterApp/TwitterApp/Resource/LoginStoryboard.storyboard
@@ -29,10 +29,10 @@
             </objects>
             <point key="canvasLocation" x="1236" y="134.48275862068968"/>
         </scene>
-        <!--HomePageStoryBoard-->
+        <!--UsersSearch-->
         <scene sceneID="Ess-wx-xQh">
             <objects>
-                <viewControllerPlaceholder storyboardName="HomePageStoryBoard" id="Qs7-c5-lx9" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="UsersSearch" id="Qs7-c5-lx9" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ius-ZX-ruZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2182.4000000000001" y="133.13343328335833"/>
