--- a/TwitterApp/TwitterApp/Resource/UsersSearch.storyboard
+++ b/TwitterApp/TwitterApp/Resource/UsersSearch.storyboard
@@ -18,8 +18,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="v3u-KR-86T">
+                            <searchBar contentMode="redraw" searchBarStyle="prominent" placeholder="search user here!" translatesAutoresizingMaskIntoConstraints="NO" id="v3u-KR-86T">
                                 <rect key="frame" x="0.0" y="64" width="375" height="56"/>
+                                <color key="barTintColor" red="0.0048598507420000003" green="0.096086271109999996" blue="0.57499289509999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0gY-6z-FN5">
@@ -35,10 +36,11 @@
                             <constraint firstItem="v3u-KR-86T" firstAttribute="trailing" secondItem="lft-Ov-3zo" secondAttribute="trailing" id="f6a-Kb-pku"/>
                             <constraint firstItem="0gY-6z-FN5" firstAttribute="leading" secondItem="lft-Ov-3zo" secondAttribute="leading" id="l1Y-AF-IRg"/>
                             <constraint firstItem="lft-Ov-3zo" firstAttribute="trailing" secondItem="0gY-6z-FN5" secondAttribute="trailing" id="rlw-Ji-1DP"/>
-                            <constraint firstItem="v3u-KR-86T" firstAttribute="top" secondItem="lft-Ov-3zo" secondAttribute="top" constant="44" id="wkv-ts-Hr2"/>
+                            <constraint firstItem="v3u-KR-86T" firstAttribute="top" secondItem="lft-Ov-3zo" secondAttribute="top" id="wkv-ts-Hr2"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="lft-Ov-3zo"/>
                     </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="seachView" destination="v3u-KR-86T" id="78R-RS-nhN"/>
                         <outlet property="usersTableView" destination="0gY-6z-FN5" id="UaR-YC-y2U"/>
