--- a/TwitterApp/TwitterApp/Source/SearchUser/UserViewCellTableViewCell.xib
+++ b/TwitterApp/TwitterApp/Source/SearchUser/UserViewCellTableViewCell.xib
@@ -19,41 +19,23 @@
                 <rect key="frame" x="0.0" y="0.0" width="349" height="125.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MbH-qB-M6w">
-                        <rect key="frame" x="121" y="21" width="203" height="62"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QYw-A6-OO8">
-                        <rect key="frame" x="10" y="10" width="100.5" height="100.5"/>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sLH-LL-tQR">
-                        <rect key="frame" x="130" y="89" width="42" height="21.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MbH-qB-M6w">
+                        <rect key="frame" x="16" y="11" width="317" height="104"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="MbH-qB-M6w" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="10" id="31q-by-dUQ"/>
-                    <constraint firstItem="sLH-LL-tQR" firstAttribute="leading" secondItem="QYw-A6-OO8" secondAttribute="trailing" constant="19.5" id="5ra-ha-OJY"/>
-                    <constraint firstItem="QYw-A6-OO8" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="MMq-mF-sgK"/>
-                    <constraint firstItem="QYw-A6-OO8" firstAttribute="height" secondItem="H2p-sc-9uM" secondAttribute="height" multiplier="0.8" id="Rqt-jk-7Ob"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="MbH-qB-M6w" secondAttribute="trailing" constant="9" id="aom-Zy-fa3"/>
-                    <constraint firstItem="QYw-A6-OO8" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="height" multiplier="0.8" id="maD-TC-UZK"/>
-                    <constraint firstItem="sLH-LL-tQR" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="78" id="nwk-hF-BkO"/>
-                    <constraint firstItem="sLH-LL-tQR" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" constant="37" id="rZh-Tr-Z71"/>
-                    <constraint firstItem="sLH-LL-tQR" firstAttribute="top" secondItem="MbH-qB-M6w" secondAttribute="bottom" constant="6" id="x8Z-AF-cTS"/>
-                    <constraint firstItem="MbH-qB-M6w" firstAttribute="leading" secondItem="QYw-A6-OO8" secondAttribute="trailing" constant="10" id="y6t-OV-OWi"/>
-                    <constraint firstItem="QYw-A6-OO8" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="zdT-Y3-Ayb"/>
+                    <constraint firstItem="MbH-qB-M6w" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="HD9-ud-66B"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="MbH-qB-M6w" secondAttribute="bottom" id="KVx-kZ-VWL"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="MbH-qB-M6w" secondAttribute="trailing" id="SeO-tn-bi3"/>
+                    <constraint firstItem="MbH-qB-M6w" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="q03-Zt-zck"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="profileImage" destination="QYw-A6-OO8" id="9Og-O3-9Fh"/>
                 <outlet property="screenName" destination="MbH-qB-M6w" id="t4T-jz-rTN"/>
-                <outlet property="userName" destination="sLH-LL-tQR" id="wEl-jj-Xwv"/>
             </connections>
             <point key="canvasLocation" x="76" y="125.03748125937032"/>
         </tableViewCell>
